[project]
name = "strava-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic-settings>=2.7.0",
    "pydantic>=2.10.4",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "ruff>=0.8.4",
    "types-requests>=2.32.0.20241016",
]
