[project]
name = "strava-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "pydantic-settings>=2.7.0",
    "pydantic>=2.10.4",
    "requests>=2.32.3",
    "polars>=1.19.0",
]

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "ruff>=0.8.4",
    "types-requests>=2.32.0.20241016",
]

